# AlterKS

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/alterks/: __init__.py  actions.py  ast_analyzer.py  cli.py  config.py  extractor.py  heuristics.py  models.py  monitor.py  pip_hook.py  quarantine.py  scanner.py
src/alterks/data/: top_packages.txt
src/alterks/sources/: __init__.py  osv.py  pypi.py
tests/: conftest.py  helpers.py  test_actions.py  test_ast_analyzer.py  test_cli.py  test_code_patterns.py  test_config.py  test_extractor.py  test_heuristics.py  test_monitor.py  test_osv.py  test_phase2.py  test_phase3.py  test_pip_hook.py  test_pypi.py  test_quarantine.py  test_scanner.py
